[metadata]
name = wrench-qi2017
version = 0.0.1
author = qi2017
author_email = qifumin2017@163.com
description = Take the spanner out of the crawler
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/qi20172017/wrench
project_urls =
    Bug Tracker = https://github.com/qi20172017/wrench/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src